--- a/src/main/resources/com/example/proyectocorte3/index.fxml
+++ b/src/main/resources/com/example/proyectocorte3/index.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
    <children>
-      <TableView fx:id="tablaElementos" layoutX="271.0" layoutY="52.0" prefHeight="396.0" prefWidth="401.0">
+      <TableView fx:id="tablaElementos" layoutX="272.0" layoutY="51.0" prefHeight="373.0" prefWidth="401.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Descripcion" />
           <TableColumn prefWidth="75.0" text="Cant Comprada" />
@@ -26,7 +28,7 @@
             <Font name="Montserrat Regular" size="17.0" />
          </font>
       </Text>
-      <TextField fx:id="inputDescripcion" alignment="CENTER" layoutX="28.0" layoutY="88.0" prefHeight="33.0" prefWidth="213.0">
+      <TextField fx:id="inputDescripcion" alignment="CENTER" layoutX="28.0" layoutY="88.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-radius: 20px;">
          <font>
             <Font name="Montserrat Regular" size="16.0" />
          </font>
@@ -36,7 +38,7 @@
             <Font name="Montserrat Regular" size="17.0" />
          </font>
       </Text>
-      <TextField fx:id="inputComprar" alignment="CENTER" layoutX="28.0" layoutY="196.0" prefHeight="33.0" prefWidth="213.0">
+      <TextField fx:id="inputComprar" alignment="CENTER" layoutX="28.0" layoutY="196.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-radius: 20px;">
          <font>
             <Font name="Montserrat Regular" size="16.0" />
          </font>
@@ -46,10 +48,28 @@
             <Font name="Montserrat Regular" size="17.0" />
          </font>
       </Text>
-      <TextField fx:id="inputComprado" alignment="CENTER" layoutX="28.0" layoutY="304.0" prefHeight="33.0" prefWidth="213.0">
+      <TextField fx:id="inputComprado" alignment="CENTER" layoutX="28.0" layoutY="304.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-radius: 20px;">
          <font>
             <Font name="Montserrat Regular" size="16.0" />
          </font>
       </TextField>
+      <Button fx:id="anadirBtn" layoutX="28.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: green;" />
+      <Button layoutX="105.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: orange;" />
+      <Button layoutX="181.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: red;" />
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="31.0" layoutY="378.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/add-circle.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="37.0" fitWidth="37.0" layoutX="109.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/edit-icon.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="37.0" fitWidth="37.0" layoutX="185.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/delete-icon.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
