--- a/src/main/resources/com/example/proyectocorte3/index.fxml
+++ b/src/main/resources/com/example/proyectocorte3/index.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
    <children>
       <TableView fx:id="tablaElementos" layoutX="272.0" layoutY="51.0" prefHeight="373.0" prefWidth="401.0">
         <columns>
@@ -43,7 +38,7 @@
             <Font name="Montserrat Regular" size="16.0" />
          </font>
       </TextField>
-      <Text layoutX="28.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingrese la cantidad Comprada" wrappingWidth="213.13000106811523">
+      <Text fx:id="cantidaComprada" layoutX="28.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingrese la cantidad Comprada" wrappingWidth="213.13000106811523">
          <font>
             <Font name="Montserrat Regular" size="17.0" />
          </font>
@@ -56,7 +51,7 @@
       <Button fx:id="anadirBtn" layoutX="28.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: green;" />
       <Button layoutX="105.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: orange;" />
       <Button layoutX="181.0" layoutY="375.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: red;" />
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="31.0" layoutY="378.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="31.0" layoutY="378.0" onMouseClicked="#agregar" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/add-circle.png" />
          </image>
