--- a/src/main/resources/com/example/proyectocorte3/index.fxml
+++ b/src/main/resources/com/example/proyectocorte3/index.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyectocorte3.IndexController">
    <children>
       <TableView fx:id="tablaElementos" layoutX="272.0" layoutY="51.0" prefHeight="373.0" prefWidth="401.0" visible="false">
         <columns>
@@ -38,12 +43,12 @@
             <Font name="Montserrat Regular" size="16.0" />
          </font>
       </TextField>
-      <Text fx:id="cantidaComprada" layoutX="28.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingrese la cantidad Comprada" wrappingWidth="213.13000106811523">
+      <Text fx:id="cantCompradaText" layoutX="28.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingrese la cantidad Comprada" visible="false" wrappingWidth="213.13000106811523">
          <font>
             <Font name="Montserrat Regular" size="17.0" />
          </font>
       </Text>
-      <TextField fx:id="inputComprado" alignment="CENTER" layoutX="28.0" layoutY="304.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-radius: 20px;">
+      <TextField fx:id="inputComprado" alignment="CENTER" layoutX="28.0" layoutY="304.0" prefHeight="33.0" prefWidth="213.0" style="-fx-background-radius: 20px;" visible="false">
          <font>
             <Font name="Montserrat Regular" size="16.0" />
          </font>
@@ -51,8 +56,7 @@
       <Button fx:id="anadirBtn" layoutX="21.0" layoutY="376.0" mnemonicParsing="false" onAction="#agregarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: green;" />
       <Button layoutX="82.0" layoutY="377.0" mnemonicParsing="false" onAction="#modificarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: orange;" visible="false" />
       <Button layoutX="141.0" layoutY="377.0" mnemonicParsing="false" onAction="#eliminarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: red;" visible="false" />
-      <ImageView disable="true" fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true"/>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="31.0" layoutY="378.0" onMouseClicked="#agregar" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="379.0" onMouseClicked="#agregar" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/add-circle.png" />
          </image>
@@ -68,5 +72,10 @@
          </image>
       </ImageView>
       <Button layoutX="200.0" layoutY="377.0" mnemonicParsing="false" onAction="#eliminarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: #0022cd;" />
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="203.0" layoutY="380.0" onMouseClicked="#agregar" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/order.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
