--- a/src/main/resources/com/example/proyectocorte3/index.fxml
+++ b/src/main/resources/com/example/proyectocorte3/index.fxml
@@ -54,7 +54,7 @@
          </font>
       </TextField>
       <Button fx:id="anadirBtn" layoutX="21.0" layoutY="376.0" mnemonicParsing="false" onMouseClicked="#agregar" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: green;" />
-      <Button fx:id="modificarBtn" layoutX="82.0" layoutY="377.0" mnemonicParsing="false" onAction="#modificarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: orange;" visible="false" />
+      <Button fx:id="modificarBtn" layoutX="82.0" layoutY="377.0" mnemonicParsing="false"  prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: orange;" visible="false" />
       <Button fx:id="eliminarBtn" layoutX="141.0" layoutY="377.0" mnemonicParsing="false" onAction="#eliminarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: red;" visible="false" />
       <ImageView disable="true" fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#modificarElemento">
          <image>
@@ -71,7 +71,7 @@
             <Image url="@Images/delete-icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="ordenarBtn" layoutX="200.0" layoutY="377.0" mnemonicParsing="false" onAction="#eliminarElemento" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: #0022cd;" visible="false" />
+      <Button fx:id="ordenarBtn" layoutX="200.0" layoutY="377.0" mnemonicParsing="false" onMouseClicked="#ordenar" prefHeight="45.0" prefWidth="45.0" style="-fx-background-color: #0022cd;" visible="false" />
       <ImageView fx:id="ordenarImg" disable="true" fitHeight="40.0" fitWidth="40.0" layoutX="203.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@Images/order.png" />
